Project

General

Profile

Actions

Fix #19691

closed

Remove journaler_allow_split_entries option

Added by John Spray about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
Administration/Usability
Target version:
% Done:

0%

Source:
Tags:
Backport:
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This has been broken in practice since at least when the MDS journal format (JournalStream etc) was changed, as the reading code no longer has a concept of padding zeros. Let's just remove this and have one less config option to document.

Actions #1

Updated by John Spray about 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by John Spray about 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF