osdc: remove journaler_allow_split_entries option

This had been broken for some time, as since the new
JournalStream stuff, zero padding was no longer a valid
encoding.

Fixes: http://tracker.ceph.com/issues/19691
Signed-off-by: John Spray <john.spray@redhat.com>